<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TEhMusicsPlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="playButtonText">Play</string>
    <string name="pauseButtonText">Pause</string>
    <string name="stopButtonText">Stop</string>
    <string name="watchVideo">Watch Video</string>
    <string name="homeButtonText">Home</string>

</resources>
